--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -28,7 +28,7 @@
 
                 {% if request.user.profile.virtual_access_card_paid %}
                     <li class="nav-item">
-                        <a href="/{{ request.resolver_match.app_name }}/virtual_card" class="nav-link"><span class="toggle-none">Virtual Card Access</span></a>
+                        <a href="/{{ request.resolver_match.app_name }}/virtual-card" class="nav-link"><span class="toggle-none">Virtual Card Access</span></a>
                     </li>
                 {% endif %}
 
