--- a/goals/templates/goals/goals_base.html
+++ b/goals/templates/goals/goals_base.html
@@ -23,13 +23,13 @@
                     {% if request.resolver_match.app_name == 'business' %}
                     <a href="/" class="nav-link"><span class="toggle-none">Dashboard</span></a>
                     {% else %}
-                    <a href="/{{ request.resolver_match.app_name }}" class="nav-link"><span class="toggle-none">{{ verbose_portal_name }} Dashboard</span></a>
+                    <a href="/" class="nav-link"><span class="toggle-none">{{ verbose_portal_name }} Dashboard</span></a>
                     {% endif %}
                 </li>
 
                 {% if request.user.profile.virtual_access_card_paid %}
                     <li class="nav-item">
-                        <a href="/{{ request.resolver_match.app_name }}/virtual_card" class="nav-link"><span class="toggle-none">Virtual Card Access</span></a>
+                        <a href="/business/virtual-card/" class="nav-link"><span class="toggle-none">Virtual Card Access</span></a>
                     </li>
                 {% endif %}
                 {% for portal in portal_goal.portals.all %}
@@ -45,161 +45,161 @@
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"><span class="toggle-none">Business Credit Building <span
                                 class="fa arrow"></span></span></a>
                         <ul class="nav-second-level nav flex-column " aria-expanded="false">
-                            <li class="nav-item"><a href="/business/business-entity" class="nav-link">Business
+                            <li class="nav-item"><a href="/goals/business-entity" class="nav-link">Business
                                 Entity</a></li>
-                            <li class="nav-item"><a href="/business/ein" class="nav-link">EIN Number</a></li>
-                            <li class="nav-item"><a href="/business/business-license" class="nav-link">Business
+                            <li class="nav-item"><a href="/goals/ein" class="nav-link">EIN Number</a></li>
+                            <li class="nav-item"><a href="/goals/business-license" class="nav-link">Business
                                 License</a></li>
-                            <li class="nav-item"><a href="/business/website-creation-options" class="nav-link">Website
+                            <li class="nav-item"><a href="/goals/website-creation-options" class="nav-link">Website
                                 Creation</a></li>
-                            <li class="nav-item"><a href="/business/fax-number-options" class="nav-link">Fax
+                            <li class="nav-item"><a href="/goals/fax-number-options" class="nav-link">Fax
                                 Number</a></li>
-                            <li class="nav-item"><a href="/business/four-eleven" class="nav-link">411
+                            <li class="nav-item"><a href="/goals/four-eleven" class="nav-link">411
                                 Listings</a></li>
-                            <li class="nav-item"><a href="/business/professional-email" class="nav-link">Professional
+                            <li class="nav-item"><a href="/goals/professional-email" class="nav-link">Professional
                                 Email Address</a></li>
-                            <li class="nav-item"><a href="/business/domain" class="nav-link">Domain</a></li>
-                            <li class="nav-item"><a href="/business/toll-free-options" class="nav-link">Toll Free
+                            <li class="nav-item"><a href="/goals/domain" class="nav-link">Domain</a></li>
+                            <li class="nav-item"><a href="/goals/toll-free-options" class="nav-link">Toll Free
                                 Number</a></li>
-                            <li class="nav-item"><a href="/business/virtual-address" class="nav-link">Virtual
+                            <li class="nav-item"><a href="/goals/virtual-address" class="nav-link">Virtual
                                 Address</a></li>
-                            <li class="nav-item"><a href="/business/business-bank-account" class="nav-link">Business
+                            <li class="nav-item"><a href="/goals/business-bank-account" class="nav-link">Business
                                 Bank Account</a></li>
-                            <li class="nav-item"><a href="/business/merchant-account" class="nav-link">Merchant
+                            <li class="nav-item"><a href="/goals/merchant-account" class="nav-link">Merchant
                                 Account</a></li>
-                            <li class="nav-item"><a href="/business/duns" class="nav-link">Duns Number</a></li>
-                            <li class="nav-item"><a href="/business/sic" class="nav-link">SIC & NAISC Codes</a>
+                            <li class="nav-item"><a href="/goals/duns" class="nav-link">Duns Number</a></li>
+                            <li class="nav-item"><a href="/goals/sic" class="nav-link">SIC & NAISC Codes</a>
                             </li>
-                            <li class="nav-item"><a href="/business/business-good-standing" class="nav-link">Checking
+                            <li class="nav-item"><a href="/goals/business-good-standing" class="nav-link">Checking
                                 If Your Business Is In Good Standing </a></li>
-                            <li class="nav-item"><a href="/business/business-in-good-standing" class="nav-link">How
+                            <li class="nav-item"><a href="/goals/business-in-good-standing" class="nav-link">How
                                 To Get Your Business Back In Good Standing</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="/business/business-credit-step" class="nav-link"> Choose Business Credit
+                        <a href="/goals/business-credit-step" class="nav-link"> Choose Business Credit
                             Building Steps You Need Done For You </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none"> Business Credit Bureaus To Become Established With  <span
                                 class="fa arrow"></span></span></a>
                         <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                            <li class="nav-item"><a href="/business/experian" class="nav-link"> Experian
+                            <li class="nav-item"><a href="/goals/experian" class="nav-link"> Experian
                                 Business </a></li>
-                            <li class="nav-item"><a href="/business/dunn-brad" class="nav-link"> Dunn &
+                            <li class="nav-item"><a href="/goals/dunn-brad" class="nav-link"> Dunn &
                                 Bradsheet </a></li>
-                            <li class="nav-item"><a href="/business/equifax" class="nav-link"> Equifax
+                            <li class="nav-item"><a href="/goals/equifax" class="nav-link"> Equifax
                                 Business </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="/businesscreditcourse/home" target="_blank" class="nav-link"> Business Credit Building
+                        <a href="/goals/home" target="_blank" class="nav-link"> Business Credit Building
                             Course </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Corporate Credit List<span
                                 class="fa arrow"></span></span></a>
                         <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                            <li class="nav-item"><a href="/business/vendor-list" class="nav-link">Starter Vendor
+                            <li class="nav-item"><a href="/goals/vendor-list" class="nav-link">Starter Vendor
                                 List</a></li>
-                            <li class="nav-item"><a href="/business/store-credit-vendor-list" class="nav-link">Store
+                            <li class="nav-item"><a href="/goals/store-credit-vendor-list" class="nav-link">Store
                                 Credit Vendor List</a></li>
-                            <li class="nav-item"><a href="/business/business-credit-vendor" class="nav-link">Revolving
+                            <li class="nav-item"><a href="/goals/business-credit-vendor" class="nav-link">Revolving
                                 Business Credit Vendor List</a></li>
-                            <li class="nav-item"><a href="/business/cc-credit-vendor" class="nav-link">Credit
+                            <li class="nav-item"><a href="/goals/cc-credit-vendor" class="nav-link">Credit
                                 Card No Personal Gaurantee Vendor List</a></li>
                         </ul>
                     </li>                    
                     {% endif %}
                     {% if portal.code == 'long_term_loan'%}
                     <li class="nav-item">
-                        <a href="/business/apply-loans" class="nav-link"> Apply For Business Loans </a>
+                        <a href="/goals/apply-loans" class="nav-link"> Apply For Business Loans </a>
                     </li>                    
                     {% endif %}
                     {% if portal.code == 'imediate_business_credit'%}
                     <li class="nav-item">
-                        <a href="/business/financing" class="nav-link"> Create My Business Financing Plan </a>
+                        <a href="/goals/financing" class="nav-link"> Create My Business Financing Plan </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span class="toggle-none">Full List Of Financing Products<span
                                 class="fa arrow"></span></span></a>
                         <ul class="nav-second-level nav flex-column sub-menu" aria-expanded="false">
-                            <li class="nav-item"><a href="/business/personal-credit-card" class="nav-link">Personal
+                            <li class="nav-item"><a href="/goals/personal-credit-card" class="nav-link">Personal
                                 Credit Cards</a></li>
-                            <li class="nav-item"><a href="/business/business-credit-card" class="nav-link">Business
+                            <li class="nav-item"><a href="/goals/business-credit-card" class="nav-link">Business
                                 Credit Cards</a></li>
-                            <li class="nav-item"><a href="/business/short-term-loan" class="nav-link">Short Term
+                            <li class="nav-item"><a href="/goals/short-term-loan" class="nav-link">Short Term
                                 Loans</a></li>
-                            <li class="nav-item"><a href="/business/business-term-loan" class="nav-link">Business
+                            <li class="nav-item"><a href="/goals/business-term-loan" class="nav-link">Business
                                 Term Loans</a></li>
-                            <li class="nav-item"><a href="/business/small-business-loan" class="nav-link">Small
+                            <li class="nav-item"><a href="/goals/small-business-loan" class="nav-link">Small
                                 Business Adminstration Loans</a></li>
-                            <li class="nav-item"><a href="/business/personal-loan" class="nav-link">Personal
+                            <li class="nav-item"><a href="/goals/personal-loan" class="nav-link">Personal
                                 Loans</a></li>
-                            <li class="nav-item"><a href="/business/business-line-credit" class="nav-link">Business
+                            <li class="nav-item"><a href="/goals/business-line-credit" class="nav-link">Business
                                 Lines Of Credit</a></li>
-                            <li class="nav-item"><a href="/business/nocredit-financings" class="nav-link">No
+                            <li class="nav-item"><a href="/goals/nocredit-financings" class="nav-link">No
                                 Credit Check Loans</a></li>
-                            <li class="nav-item"><a href="/business/invoice-factoring" class="nav-link">Invoice
+                            <li class="nav-item"><a href="/goals/invoice-factoring" class="nav-link">Invoice
                                 Factoring</a></li>
-                            <li class="nav-item"><a href="/business/invoice-financings" class="nav-link">Invoice
+                            <li class="nav-item"><a href="/goals/invoice-financings" class="nav-link">Invoice
                                 Financing</a></li>
-                            <li class="nav-item"><a href="/business/equipment-financings" class="nav-link">Equipment
+                            <li class="nav-item"><a href="/goals/equipment-financings" class="nav-link">Equipment
                                 Financing</a></li>
                         </ul>
                     </li>
                     {% endif %}
                     {% if portal.code == 'fix_personal_credit'%}
                     <li class="nav-item">
-                        <a href="/business/credit-situation" class="nav-link"> Create My Credit Repair Plan </a>
+                        <a href="/goals/credit-situation" class="nav-link"> Create My Credit Repair Plan </a>
                     </li>                    
                     <li class="nav-item">
-                        <a href="/creditcourse/maincreditfile" class="nav-link">Personal credit course</a>
+                        <a href="/goals/maincreditfile" class="nav-link">Personal credit course</a>
                     </li>            
                     <li class="nav-item">
-                        <a href="/business/credit-trade-lines" class="nav-link"> Personal Credit Primary
+                        <a href="/goals/credit-trade-lines" class="nav-link"> Personal Credit Primary
                             Tradelines </a>
                     </li>                                 
                     {% endif %}
                     {% if portal.code == 'affiliate_partner'%}
                     <li class="nav-item">
-                        <a href="/business/refer/" class="nav-link">Make Extra Money Referring Friends</a>
+                        <a href="/goals/refer/" class="nav-link">Make Extra Money Referring Friends</a>
                     </li>                    
                     {% endif %}
                     {% if portal.code == 'business_marketing'%}
                     <li class="nav-item">
-                        <a href="/business/marketing-business/" class="nav-link">Marketing Your Busines</a>
+                        <a href="/goals/marketing-business/" class="nav-link">Marketing Your Busines</a>
                     </li>                                        
                     {% endif %}
                     {% if portal.code == 'repair_business_credit'%}
                     <li class="nav-item">
-                        <a href="/business/business-credit-monitoring/" class="nav-link">
+                        <a href="/goals/business-credit-monitoring/" class="nav-link">
                             Sign Up For Business Credit Monitoring
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/business/business-credit-repair-new/">Business Credit Repair</a>
+                        <a class="nav-link" href="/goals/business-credit-repair-new/">Business Credit Repair</a>
                     </li>
                     {% endif %}
                     {% if portal.code == 'services_you_offer'  %}
                     <li class="nav-item">
-                        <a href="/business/business-credit-step/" class="nav-link">Choose Business Credit Building Steps You Need Done For You</a>
+                        <a href="/goals/business-credit-step/" class="nav-link">Choose Business Credit Building Steps You Need Done For You</a>
                     </li>     
                     {% endif %}     
                     {% if portal.code == 'business_insurance' %}
                     <li class="nav-item">
-                        <a href="/business/insurance-products" class="nav-link"> Insurance Products </a>
+                        <a href="/goals/insurance-products" class="nav-link"> Insurance Products </a>
                     </li>                                  
                     {% endif %}
                     {% if portal.code == 'need_merchant_account' %}
                         <li class="nav-item">
-                            <a href="/business/merchant-account" class="nav-link">Merchant
+                            <a href="/goals/merchant-account" class="nav-link">Merchant
                             Account</a>
                         </li>                                  
                     {% endif %} 
                     {% if portal.code == 'offer_financing2_customers' %}
                     <li class="nav-item">
-                        <a href="/business/customer-financing-offer" class="nav-link"> Offering Financing To Your
+                        <a href="/goals/customer-financing-offer" class="nav-link"> Offering Financing To Your
                             Customers </a>
                     </li>                                 
                     {% endif %}         
