--- a/goals/templates/immediatemoney/2.html
+++ b/goals/templates/immediatemoney/2.html
@@ -1,4 +1,4 @@
-{% extends "immediatemoney/base-immediatemoney.html" %}
+{% extends "goals/goals_base.html" %}
 {% load static %}
 {% block content %}
 
