--- a/goals/templates/makeextramoney/makeextramoney.html
+++ b/goals/templates/makeextramoney/makeextramoney.html
@@ -1,4 +1,4 @@
-`{% extends "makeextramoney/base-makeextramoney.html" %}
+`{% extends "goals/goals_base.html" %}
 {% load static %}
 {% block content %}
     <div class="row page-header">
