--- a/goals/templates/offeringfinanicg/offeringfinancing.html
+++ b/goals/templates/offeringfinanicg/offeringfinancing.html
@@ -1,4 +1,4 @@
-{% extends "offeringfinanicg/base-offeringfinancing.html" %}
+{% extends "goals/goals_base.html" %}
 {% load static %}
 
 {% block extrastyle %}
