--- a/goals/templates/marketingbusiness/marketingbusiness.html
+++ b/goals/templates/marketingbusiness/marketingbusiness.html
@@ -1,4 +1,4 @@
-{% extends "goals/goals_base.html" %}
+{% extends "marketingbusiness/base-marketingbusiness.html" %}
 {% load static %}
 
 {% block extrastyle %}
