--- a/goals/templates/repairbusinesscredit/repairbusinesscredit.html
+++ b/goals/templates/repairbusinesscredit/repairbusinesscredit.html
@@ -1,4 +1,4 @@
-{% extends "goals/goals_base.html" %}
+{% extends "repairbusinesscredit/base-repairbusinesscredit.html" %}
 {% load static %}
 
 {% block extrastyle %}
