--- a/goals/templates/buildbusinesscredit/buildbusinesscredit.html
+++ b/goals/templates/buildbusinesscredit/buildbusinesscredit.html
@@ -1,4 +1,4 @@
-{% extends "goals/goals_base.html" %}
+{% extends "buildbusinesscredit/base-buildbusinesscredit.html" %}
 {% load static %}
 {% block content %}
 
