--- a/goals/templates/buildpersonalcredit/2.html
+++ b/goals/templates/buildpersonalcredit/2.html
@@ -1,4 +1,4 @@
-{% extends "goals/goals_base.html" %}
+{% extends "buildpersonalcredit/base-buildpersonalcredit.html" %}
 {% load static %}
 
 {% block content %}
