--- a/whitelabelpartnerportal/templates/becomingapartner.html
+++ b/whitelabelpartnerportal/templates/becomingapartner.html
@@ -25,6 +25,50 @@
                         allowfullscreen></iframe>
             </div>
         </div>
+        {% if not form and partners %}
+            <div class="row">
+                <div style="margin: 0 auto">
+                    <h1>Your Provided Business Information</h1>
+                </div>
+
+            </div>
+
+            <table id="datatable" class="table table-striped dt-responsive nowrap">
+                <thead>
+                <tr>
+                    <th>Logo</th>
+                    <th>Business Name</th>
+                    <th>Business Number</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                {% for partner in partners %}
+                    <tr>
+                        <td>{% if partner.logo %}
+                            <img src="{{ partner.logo.url }}" height="80px">
+                        {% else %}
+                            No Logo
+                        {% endif %}
+                        </td>
+                        <td>{{ partner.business_name }}</td>
+                        <td>{{ partner.business_number }}</td>
+                        <td><a class="btn btn-primary"
+                               href="/whitelabelpartnerportal/becomingapartner/edit/{{ partner.id }}">Edit</a></td>
+                        <td>
+                            <form method="post" id="delete" name="delete" action="">
+                                {% csrf_token %}
+                                <input type="text" name="delete" value="{{ partner.id }}" hidden/>
+                                <input type="submit" value="Delete" class="btn btn-primary"/>
+                            </form>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% endif %}
 
 
         {% if form %}
@@ -56,15 +100,18 @@
 
             <div class="row">
             <div style="margin: 0 auto 100px auto; width: 400px">
-            <form action="/whitelabelpartnerportal/enternewleads" accept-charset="UTF-8"
-                  method="post">{% csrf_token %}
-
+            <form accept-charset="UTF-8"
+                  method="post" enctype="multipart/form-data">{% csrf_token %}
                 <br>
                 <h4>Business Name You Would Like To Use</h4>
-                <input type="text" name="firstname" id="newlead_firstname"/>
+                <input type="text" name="business_name" id="newlead_firstname"/>
                 <br>
                 <h4>Business Phone Number You Would Like To Use </h4>
-                <input type="text" name="lastname" id="newlead_lastname"/>
+                <input type="text" name="business_number" id="newlead_lastname"/>
+                <br>
+                <h4>Logo </h4>
+                <input type="file" name="logo" id="logo"/>
+                <br>
                 <br>
                 <div style="display: flex; justify-content: space-around">
                     <button type="submit" name="commit" value="Create Newlead" class="btn btn-primary"
@@ -75,6 +122,9 @@
 
             </form>
         {% endif %}
+
+
+
 
         </div>
 
