--- a/business/templates/financingProducts/invoiceFactoring.html
+++ b/business/templates/financingProducts/invoiceFactoring.html
@@ -50,8 +50,22 @@
                             </tr>
                             </thead>
 
-                            </tbody>
+
                             <tbody>
+                            {% for invoice in data_list %}
+                                <tr>
+                                    <td>{{ invoice.lender_name }}</td>
+                                    <td>{{ invoice.personal_credit_score }}</td>
+                                    <td>{{ invoice.business_revenue }}</td>
+                                    <td>{{ invoice.time_in_business }}</td>
+                                    <td>{{ invoice.apr }}</td>
+                                    <td>{{ invoice.strategy }}</td>
+                                    <td>
+                                        <a href="{% url 'business:apply-loans' %}" class="btn btn-sm btn-primary">Apply
+                                            Now</a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
                             </tbody>
                         </table>
 
