--- a/business/templates/businessCreditBuilding/goals.html
+++ b/business/templates/businessCreditBuilding/goals.html
@@ -132,7 +132,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://images.pexels.com/photos/210881/pexels-photo-210881.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                    <img src="https://images.pexels.com/photos/210881/pexels-photo-210881.jpehttps://images.pexels.com/photos/2244746/pexels-photo-2244746.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                          height="270px" width="100%" alt="">
                     <div class="card-body">
                         <h4 class="card-text">Repair My Business Credit</h4>
@@ -148,7 +148,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://images.pexels.com/photos/259027/pexels-photo-259027.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    <img src="https://images.pexels.com/photos/2988232/pexels-photo-2988232.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                          height="270px" width="100%" alt="">
                     <div class="card-body">
                         <h4 class="card-text">Get A Merchant Account For Your Business To Accept Credit Card & Debit
@@ -165,7 +165,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://images.pexels.com/photos/590041/pexels-photo-590041.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    <img src="https://images.pexels.com/photos/128867/coins-currency-investment-insurance-128867.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                          height="270px" width="100%" alt="">
                     <div class="card-body">
                         <h4 class="card-text">I Want To Learn How To Offer Financing To My Existing Customers</h4>
