--- a/business/templates/businessCreditBuilding/goals.html
+++ b/business/templates/businessCreditBuilding/goals.html
@@ -132,7 +132,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://images.pexels.com/photos/210881/pexels-photo-210881.jpehttps://images.pexels.com/photos/2244746/pexels-photo-2244746.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                    <img src="https://images.pexels.com/photos/2244746/pexels-photo-2244746.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
                          height="270px" width="100%" alt="">
                     <div class="card-body">
                         <h4 class="card-text">Repair My Business Credit</h4>
