--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -41,7 +41,7 @@
                         <ul class="dropdown-menu top-dropdown">
                             {% if request.user.is_authenticated %}
                                 <li>
-                                    <a href="{% url 'user:myprogress' %}"><i class="icon-bell0"></i>My Progress</a>
+                                    <a href="{% url 'user:myprogress' %}"><i class="icon-bell0"></i>My Dashboard</a>
                                 </li>
                                 <li class="dropdown-divider"></li>
                                 <li>
