--- a/business/templates/home/businesscards.html
+++ b/business/templates/home/businesscards.html
@@ -27,9 +27,6 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/q576AtuQOTY" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
                     <div class="card-body">
                         <p class="card-text">0% Business Credit Card Strategy For Applying For Multiple Cards At One
                             Time & Not Getting Multiple Inquiries</p>
@@ -52,24 +49,18 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/4QKIjq8Bib8" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
                     <div class="card-body">
                         <p class="card-text">How To Get An Easy Credit Limit Increase</p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <%= link_to "Download Credit Maximizer
-                            PDF","https://millennialbusinessbuilders.com/credit.pdf", :target => "_blank" ,:class=>"btn
-                            btn-primary" %>
+                            <a target="_blank" class="btn btn-primary"
+                               href="https://millennialbusinessbuilders.com/credit.pdf">Download Credit Maximizer
+                                PDF</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/LZy_jseX_2k" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
                     <div class="card-body">
                         <p class="card-text">Creating Relationship With Banks To Get Easy Approvals</p>
                         <h4>Benefits Of Using Business Credit Cards</h4>
@@ -82,15 +73,15 @@
                             timely payments can help boost your business credit rating quickly. Make sure to do business
                             with suppliers who report your transactions to the credit bureaus.
                         </li>
-                        <li><b>Separate business credit.</b>A business credit card stands on its own, meaning your
+                        <li><b>Separate business credit.</b> A business credit card stands on its own, meaning your
                             personal credit rating is not reflected in your transactions. In addition, by having a
                             separate credit card for a small business, you no longer have to sort out business and
                             personal transactions when it is time to pay taxes.
                         </li>
-                        <li><b>Control on employee spending.</b>A business credit card makes it easier to set limits on
+                        <li><b>Control on employee spending.</b> A business credit card makes it easier to set limits on
                             spending by employees.
                         </li>
-                        <li><b>Business perks.</b>The rewards offered on business credit cards are typically business
+                        <li><b>Business perks.</b> The rewards offered on business credit cards are typically business
                             related and may include discounts on business travel and on shopping at business supply
                             outlets.
                         </li>
