--- a/business/templates/home/businesscreditcardstrategy.html
+++ b/business/templates/home/businesscreditcardstrategy.html
@@ -59,11 +59,11 @@
                     <div class="card-body">
                         <p class="card-text">Download Our Credit Maximizer PDF to see how you can increase the amount of
                             credit you can receive. </p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <%= link_to "Download Credit Maximizer
-                            PDF","https://millennialbusinessbuilders.com/credit.pdf", :target => "_blank" ,:class=>"btn
-                            btn-primary" %>
-                        </div>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a target="_blank" class="btn btn-primary"
+                                   href="https://millennialbusinessbuilders.com/credit.pdf">Download Credit Maximizer
+                                    PDF</a>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -83,15 +83,15 @@
                             timely payments can help boost your business credit rating quickly. Make sure to do business
                             with suppliers who report your transactions to the credit bureaus.
                         </li>
-                        <li><b>Separate business credit.</b>A business credit card stands on its own, meaning your
+                        <li><b>Separate business credit.</b> A business credit card stands on its own, meaning your
                             personal credit rating is not reflected in your transactions. In addition, by having a
                             separate credit card for a small business, you no longer have to sort out business and
                             personal transactions when it is time to pay taxes.
                         </li>
-                        <li><b>Control on employee spending.</b>A business credit card makes it easier to set limits on
+                        <li><b>Control on employee spending.</b> A business credit card makes it easier to set limits on
                             spending by employees.
                         </li>
-                        <li><b>Business perks.</b>The rewards offered on business credit cards are typically business
+                        <li><b>Business perks.</b> The rewards offered on business credit cards are typically business
                             related and may include discounts on business travel and on shopping at business supply
                             outlets.
                         </li>
